--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "webpack-notifier": "^1.15.0"
   },
   "scripts": {
-    "dev-server": "encore dev-server --public http://darek.localhost:8080 --host 0.0.0.0",
+    "dev-server": "encore dev-server",
     "dev": "encore dev",
     "watch": "encore dev --watch",
     "build": "encore production --progress"
